# DraftLoop

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.web  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  skills-lock.json
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/draftloop_api/: deps.py  lifespan.py  main.py  wiring.py
apps/api/src/draftloop_api/routes/: __init__.py  admin.py  drafts.py  edits.py  health.py  ingest.py  matters.py  version.py
apps/api/tests/: test_drafts_and_edits.py  test_full_routes.py  test_health.py
apps/web/: next.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo
data/golden/: manifest.json  qa_v1.json
docs/eval-reports/2026-05-16/: metrics.json  report.html  report.md
docs/superpowers/plans/: 2026-05-15-00-foundation-plan.md  2026-05-15-01-ingestion-plan.md  2026-05-15-02-retrieval-plan.md  2026-05-15-03-drafting-plan.md  2026-05-15-04-operator-ui-plan.md  2026-05-15-05-improvement-loop-plan.md  2026-05-15-06-evaluation-plan.md  2026-05-15-07-composition-demo-plan.md  2026-05-15-plans-index.md
docs/superpowers/specs/: 2026-05-15-00-overview-design.md  2026-05-15-01-ingestion-design.md  2026-05-15-02-retrieval-design.md  2026-05-15-03-drafting-design.md  2026-05-15-04-operator-ui-design.md  (+3 more)
scripts/: build_golden_qa.py  build_synthetic_corpus.py  check_boundaries.py  check_diagrams.sh  dev.sh  eval.sh  eval_diff.py  lint.sh  run_ingest_demo.py  seed_demo.py  setup.sh
tests/contract/: test_openapi_shape.py
tests/e2e/: test_smoke.py
tests/integration/: test_drafting_pipeline.py  test_ingest_pipeline.py  test_retrieval_end_to_end.py
tests/lint/: test_boundary_lint.py
(+17 files in other folders)
