[project]
name = "draftloop-workspace"
version = "0.1.0"
description = "DraftLoop monorepo root"
requires-python = ">=3.12,<3.13"
dependencies = []

[tool.uv]
package = false                # this is a workspace root, not a package

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.112.0",
    "structlog>=24.4.0",
]

[tool.uv.workspace]
members = ["packages/draftloop_core", "packages/draftloop_ingest", "packages/draftloop_retrieval", "packages/draftloop_drafting", "apps/api"]

[tool.uv.sources]
draftloop-core = { workspace = true }
draftloop-ingest = { workspace = true }
draftloop-retrieval = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["data", "node_modules", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["build/", "dist/", ".venv/"]

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers --import-mode=importlib"
asyncio_mode = "auto"
testpaths = ["packages", "apps", "tests"]
